interval model